--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Music</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
-    <audio controls>
+    <audio controls autoplay>
         <source src="烂泥.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
-</html></audio>
+</html>
